# madft

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: categories.toml
docs/superpowers/plans/: 2026-06-15-madft-plan-1-facts.md  2026-06-15-madft-plan-2-categories.md  2026-06-15-madft-plan-3-engine-writer.md  2026-06-15-madft-plan-4-cli-golden.md  2026-06-16-madft-plan-5-info-category-app-force.md  2026-06-16-madft-v0.2.1.md  2026-06-16-madft-v0.2.2.md  2026-06-16-madft-v0.2.md  2026-06-17-madft-v0.3.0.md  2026-06-18-madft-v0.4.0-comprehensive-category-curation.md  2026-06-24-desktop-file-parse.md  2026-06-24-stdin-type-lists.md
docs/superpowers/specs/: 2026-06-15-madft-design.md  2026-06-16-madft-info-category-and-app-query-design.md  2026-06-16-madft-v0.2-design.md  2026-06-16-madft-v0.2.1-presence-filter-and-comprehensive-tree.md  2026-06-16-madft-v0.2.2-app-shows-undeclared-defaults.md  2026-06-17-madft-v0.3.0-subclass-inheritance-awareness.md  2026-06-18-madft-comprehensive-category-curation-design.md  2026-06-24-desktop-file-parse-design.md  2026-06-24-stdin-type-lists-design.md
src/: appindex.rs  cli.rs  defaults.rs  desktop.rs  engine.rs  error.rs  lib.rs  main.rs  mimedb.rs  paths.rs  types.rs  writer.rs
src/categories/: merge.rs  mod.rs  source.rs  tree.rs
tests/: golden.rs
tests/fixtures/applications/: actions-app.desktop  eog.desktop  mpv.desktop  nvim.desktop  webcam.desktop
tests/fixtures/categories/: categories.toml  overrides.toml
tests/fixtures/config/: mimeapps.list
tests/fixtures/config-high/: mimeapps.list
(+6 files in other folders)
