[package]
name = "madft"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "Inspect and set XDG default applications via a curated category tree"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
toml = "0.8"
